fix tbl-show-btn nowrap

--- a/public/stylesheets/elements.css
+++ b/public/stylesheets/elements.css
@@ -379,15 +379,20 @@ button:focus {
 	padding-bottom: 2px;
 	border: 1px solid #8f9f94;
 	transition: all 0.4s ease 0s;*/
-	border: 1px solid #8f9f94;
+	border-radius: 50px;
+	border: 1px solid #f0f0f0;
+	padding-left: 8px;
+	padding-right: 8px;
 	opacity: 0.7;
 	transition: all 0.4s ease 0s;
 }
 
 .tbl-show-link:hover {
 	opacity: 1;
+	color: #000;
+	border-radius: 1px;
 	cursor: pointer;
-	border-radius: 8px;
+	border: 1px solid #8f9f94;
 	transition: all 0.3s ease 0s;
 	/*border-radius: 1px;
 	background-color: #cfcfcf;
